--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=7.3",
         "laravel/framework": "^6.0|^7.0|^8.0",
         "spatie/laravel-fractal": "^5.8",
-        "laravel/legacy-factories": "^1.0"
+        "laravel/legacy-factories": "^1.0",
+        "zhijia/laravel-mongodb-transactions": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0",
