feat: added package for mongodb transactions

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
                 "Musonza\\Chat\\ChatServiceProvider"
             ],
             "aliases": {
-                "Chat": "Musonza\\Chat\\Facades\\ChatFacade"
+                "Chat": "Chat"
             }
         }
     }
